// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Amplifier with defaultProps 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "500px",
    }
  }
>
  <div
    className="sc-bdVaJa exbQoe"
  >
    <svg
      aria-labelledby="amplifier-attribution"
      className="sc-bwzfXH hGBoZU"
      version="1.1"
      viewBox="0 0 100 100"
      x="0px"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <g>
        <path
          d="M90,26.938C90,23.659,88.028,21,85.596,21H15.404C12.972,21,11,23.659,11,26.938v56.123C11,86.341,12.972,89,15.404,89   h70.191C88.028,89,90,86.341,90,83.062V26.938z M88,33.486C88,34.041,85.983,34,83.691,34H17.148C14.858,34,13,34.041,13,33.486   v-7.649C13,25.281,14.858,23,17.148,23h66.543C85.983,23,88,24.998,88,25.554V33.486z"
        />
        <circle
          cx="21.694"
          cy="28.984"
          r="2.016"
        />
        <circle
          cx="40.922"
          cy="28.984"
          r="2.016"
        />
        <circle
          cx="47.434"
          cy="28.984"
          r="2.016"
        />
        <circle
          cx="53.985"
          cy="28.984"
          r="2.016"
        />
        <circle
          cx="60.032"
          cy="28.984"
          r="2.016"
        />
        <circle
          cx="72.941"
          cy="28.984"
          id="statusLight"
          r="2.016"
        />
        <rect
          height="3.372"
          width="1.977"
          x="31.947"
          y="27.298"
        />
        <rect
          height="3.372"
          width="1.977"
          x="65.905"
          y="27.298"
        />
        <circle
          cx="16.153"
          cy="29.161"
          r="0.618"
        />
        <circle
          cx="83.382"
          cy="29.255"
          r="0.618"
        />
        <circle
          cx="78.02"
          cy="29.255"
          r="0.618"
        />
        <circle
          cx="27.78"
          cy="28.984"
          r="2.016"
        />
        <path
          d="M64.892,19.271c0,0.956-0.774,1.729-1.729,1.729c0.034,0.016-2.65-4.176-12.929-4.151   C41.325,16.872,37.553,20.986,37.521,21c-0.955,0-1.729-0.774-1.729-1.729l0,0c0-0.955,0.774-1.729,1.729-1.729   c0.031-0.014,3.804-4.128,12.712-4.151c10.273-0.025,12.969,4.167,12.929,4.151C64.117,17.541,64.892,18.315,64.892,19.271   L64.892,19.271z"
        />
        <path
          d="M20.067,91.429c0,0.624-0.688,0.646-1.534,0.646l0,0c-0.847,0-1.533-0.022-1.533-0.646v-2.905   c0-0.624,0.686-0.646,1.533-0.646l0,0c0.847,0,1.534,0.021,1.534,0.646V91.429z"
        />
        <path
          d="M84.364,91.832c0,0.624-0.687,0.646-1.534,0.646l0,0c-0.846,0-1.532-0.021-1.532-0.646v-2.904   c0-0.625,0.687-0.646,1.532-0.646l0,0c0.848,0,1.534,0.021,1.534,0.646V91.832z"
        />
      </g>
      <text
        id="amplifier-attribution"
      >
        Created by Deo Marco Beltran from the noun project.
      </text>
    </svg>
    <svg
      aria-labelledby="speaker-attribution"
      className="sc-bwzfXH hGBoZU"
      version="1.1"
      viewBox="0 0 96 120"
      x="0px"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <g>
        <path
          d="M48,96C21.533,96,0,74.467,0,48S21.533,0,48,0s48,21.533,48,48S74.467,96,48,96z M48,4   C23.738,4,4,23.738,4,48s19.738,44,44,44s44-19.738,44-44S72.262,4,48,4z"
        />
      </g>
      <g>
        <path
          d="M48,87C26.495,87,9,69.505,9,48S26.495,9,48,9s39,17.495,39,39S69.505,87,48,87z M48,13   c-19.299,0-35,15.701-35,35s15.701,35,35,35s35-15.701,35-35S67.299,13,48,13z"
        />
      </g>
      <g>
        <path
          d="M48,59c-6.065,0-11-4.935-11-11s4.935-11,11-11s11,4.935,11,11S54.065,59,48,59z M48,41   c-3.86,0-7,3.141-7,7s3.14,7,7,7s7-3.141,7-7S51.86,41,48,41z"
        />
      </g>
      <text
        id="speaker-attribution"
      >
        Created by Yaroslav Samoylov from the noun project.
      </text>
    </svg>
  </div>
</div>
`;

exports[`Storyshots Amplifier with knobs 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "500px",
    }
  }
>
  <div
    className="sc-bdVaJa exbQoe"
  >
    <svg
      aria-labelledby="amplifier-attribution"
      className="sc-bwzfXH hGBoZU"
      version="1.1"
      viewBox="0 0 100 100"
      x="0px"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <g>
        <path
          d="M90,26.938C90,23.659,88.028,21,85.596,21H15.404C12.972,21,11,23.659,11,26.938v56.123C11,86.341,12.972,89,15.404,89   h70.191C88.028,89,90,86.341,90,83.062V26.938z M88,33.486C88,34.041,85.983,34,83.691,34H17.148C14.858,34,13,34.041,13,33.486   v-7.649C13,25.281,14.858,23,17.148,23h66.543C85.983,23,88,24.998,88,25.554V33.486z"
        />
        <circle
          cx="21.694"
          cy="28.984"
          r="2.016"
        />
        <circle
          cx="40.922"
          cy="28.984"
          r="2.016"
        />
        <circle
          cx="47.434"
          cy="28.984"
          r="2.016"
        />
        <circle
          cx="53.985"
          cy="28.984"
          r="2.016"
        />
        <circle
          cx="60.032"
          cy="28.984"
          r="2.016"
        />
        <circle
          cx="72.941"
          cy="28.984"
          id="statusLight"
          r="2.016"
        />
        <rect
          height="3.372"
          width="1.977"
          x="31.947"
          y="27.298"
        />
        <rect
          height="3.372"
          width="1.977"
          x="65.905"
          y="27.298"
        />
        <circle
          cx="16.153"
          cy="29.161"
          r="0.618"
        />
        <circle
          cx="83.382"
          cy="29.255"
          r="0.618"
        />
        <circle
          cx="78.02"
          cy="29.255"
          r="0.618"
        />
        <circle
          cx="27.78"
          cy="28.984"
          r="2.016"
        />
        <path
          d="M64.892,19.271c0,0.956-0.774,1.729-1.729,1.729c0.034,0.016-2.65-4.176-12.929-4.151   C41.325,16.872,37.553,20.986,37.521,21c-0.955,0-1.729-0.774-1.729-1.729l0,0c0-0.955,0.774-1.729,1.729-1.729   c0.031-0.014,3.804-4.128,12.712-4.151c10.273-0.025,12.969,4.167,12.929,4.151C64.117,17.541,64.892,18.315,64.892,19.271   L64.892,19.271z"
        />
        <path
          d="M20.067,91.429c0,0.624-0.688,0.646-1.534,0.646l0,0c-0.847,0-1.533-0.022-1.533-0.646v-2.905   c0-0.624,0.686-0.646,1.533-0.646l0,0c0.847,0,1.534,0.021,1.534,0.646V91.429z"
        />
        <path
          d="M84.364,91.832c0,0.624-0.687,0.646-1.534,0.646l0,0c-0.846,0-1.532-0.021-1.532-0.646v-2.904   c0-0.625,0.687-0.646,1.532-0.646l0,0c0.848,0,1.534,0.021,1.534,0.646V91.832z"
        />
      </g>
      <text
        id="amplifier-attribution"
      >
        Created by Deo Marco Beltran from the noun project.
      </text>
    </svg>
    <svg
      aria-labelledby="speaker-attribution"
      className="sc-bwzfXH hGBoZU"
      version="1.1"
      viewBox="0 0 96 120"
      x="0px"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <g>
        <path
          d="M48,96C21.533,96,0,74.467,0,48S21.533,0,48,0s48,21.533,48,48S74.467,96,48,96z M48,4   C23.738,4,4,23.738,4,48s19.738,44,44,44s44-19.738,44-44S72.262,4,48,4z"
        />
      </g>
      <g>
        <path
          d="M48,87C26.495,87,9,69.505,9,48S26.495,9,48,9s39,17.495,39,39S69.505,87,48,87z M48,13   c-19.299,0-35,15.701-35,35s15.701,35,35,35s35-15.701,35-35S67.299,13,48,13z"
        />
      </g>
      <g>
        <path
          d="M48,59c-6.065,0-11-4.935-11-11s4.935-11,11-11s11,4.935,11,11S54.065,59,48,59z M48,41   c-3.86,0-7,3.141-7,7s3.14,7,7,7s7-3.141,7-7S51.86,41,48,41z"
        />
      </g>
      <text
        id="speaker-attribution"
      >
        Created by Yaroslav Samoylov from the noun project.
      </text>
    </svg>
  </div>
</div>
`;

exports[`Storyshots CoffePot with defaultProps 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "500px",
    }
  }
>
  <svg
    aria-labelledby="coffee-pot-attribution"
    className="sc-htpNat hszbRe"
    version="1.1"
    viewBox="0 0 100 100"
    x="0px"
    xmlns="http://www.w3.org/2000/svg"
    y="0px"
  >
    <path
      d="M-25.473,48.329c-3.073-7.952-9.418-20.607-13.14-28.897c-0.796-1.772-0.87-8.474-3.094-9.441s-6.671,2.19-13.632,2.287  c-1.86,2.232-4.634,6.293-5.815,8.048c-0.203-0.524-0.683-0.893-1.243-0.893h-0.483v-5.317c0-0.32-0.26-0.58-0.58-0.58  c0,0-32.286-4.387-34.375-4.67c-2.088-0.284-1.892,1.325-1.734,1.604l4.695,8.964h-0.2c-0.744,0-1.347,0.649-1.347,1.45l-1.36,8.121  c0,0.801,0.649,1.45,1.45,1.45h-0.299c-0.263,0-0.509-0.071-0.722-0.194C-107.917,36.869-115,48.896-115,62.068  c0,17.499,16.102,29.101,35.965,29.101c19.863,0,35.965-11.602,35.965-29.101c0-13.118-7.026-25.098-17.518-31.724  c0.527-0.217,0.898-0.735,0.898-1.34l-0.186-1.11c2.562-1.67,7.03-4.617,8.31-5.697c1.827-1.541,5.417-2.367,7.444,2.03  c1.163,2.523,7.086,18.029,13.68,25.509c1.225,1.39,2.705,2.087,4.053,2.144C-25.669,51.91-24.264,51.458-25.473,48.329z   M-59.796,36.254c7.715,6.248,12.375,15.818,12.375,25.814c0,7.037-3.065,13.152-8.863,17.685  c-5.828,4.556-13.908,7.065-22.752,7.065c-8.843,0-16.923-2.509-22.752-7.065c-5.798-4.532-8.863-10.648-8.863-17.685  c0-9.775,4.456-19.142,11.867-25.394c0.781-0.659,1.959-1.87,4.956-1.87s27.264,0,29.681,0  C-61.729,34.804-60.42,35.748-59.796,36.254z"
    />
    <path
      d="M-108.215,61.75c-0.001,0.106-0.005,0.212-0.005,0.318c0,6.262,2.742,11.715,7.929,15.77  c5.403,4.224,12.952,6.55,21.255,6.55s15.852-2.326,21.255-6.55c5.187-4.055,7.929-9.508,7.929-15.77  c0-0.106-0.003-0.212-0.005-0.318H-108.215z"
    />
    <path
      d="M-61.68,39.027c-2.532-1.211-2.993-0.566-1.023,1.434c0,0,3.078,3.126,4.17,8.038  c1.091,4.912-0.374,9.047-0.374,9.047c-0.938,2.646-0.247,3.036,1.534,0.866c0,0,4.059-4.943,2.761-10.785  C-55.91,41.786-61.68,39.027-61.68,39.027z"
      fill="#000000"
    />
    <path
      d="M-61.68,39.027c-2.532-1.211-2.993-0.566-1.023,1.434c0,0,3.078,3.126,4.17,8.038c1.091,4.912-0.374,9.047-0.374,9.047  c-0.938,2.646-0.247,3.036,1.534,0.866c0,0,4.059-4.943,2.761-10.785C-55.91,41.786-61.68,39.027-61.68,39.027z"
    />
    <path
      d="M-145.473,48.329c-3.073-7.952-9.418-20.607-13.14-28.897c-0.796-1.772-0.87-8.474-3.094-9.441  c-2.224-0.967-6.671,2.19-13.632,2.287c-1.86,2.232-4.634,6.293-5.815,8.048c-0.203-0.524-0.683-0.893-1.243-0.893h-0.483v-5.317  c0-0.32-0.26-0.58-0.58-0.58c0,0-32.286-4.387-34.375-4.67c-2.088-0.284-1.892,1.325-1.734,1.604l4.695,8.964h-0.2  c-0.744,0-1.347,0.649-1.347,1.45l-1.36,8.121c0,0.801,0.649,1.45,1.45,1.45h-0.299c-0.263,0-0.509-0.071-0.722-0.194  C-227.917,36.869-235,48.896-235,62.068c0,17.499,16.102,29.101,35.965,29.101s35.965-11.602,35.965-29.101  c0-13.118-7.026-25.098-17.518-31.724c0.527-0.217,0.898-0.735,0.898-1.34l-0.186-1.11c2.562-1.67,7.03-4.617,8.31-5.697  c1.827-1.541,5.417-2.367,7.444,2.03c1.163,2.523,7.086,18.029,13.68,25.509c1.225,1.39,2.705,2.087,4.053,2.144  C-145.669,51.91-144.264,51.458-145.473,48.329z M-179.796,36.254c7.715,6.248,12.375,15.818,12.375,25.814  c0,7.037-3.065,13.152-8.863,17.685c-5.828,4.556-13.908,7.065-22.752,7.065c-8.843,0-16.923-2.509-22.752-7.065  c-5.798-4.532-8.863-10.648-8.863-17.685c0-9.775,4.456-19.142,11.867-25.394c0.781-0.659,1.959-1.87,4.956-1.87  c2.997,0,27.264,0,29.681,0C-181.729,34.804-180.42,35.748-179.796,36.254z"
    />
    <path
      d="M-181.68,39.027c-2.532-1.211-2.993-0.566-1.023,1.434c0,0,3.078,3.126,4.17,8.038  c1.091,4.912-0.374,9.047-0.374,9.047c-0.938,2.646-0.247,3.036,1.534,0.866c0,0,4.059-4.943,2.761-10.785  C-175.91,41.786-181.68,39.027-181.68,39.027z"
      fill="#000000"
    />
    <path
      d="M-181.68,39.027c-2.532-1.211-2.993-0.566-1.023,1.434c0,0,3.078,3.126,4.17,8.038c1.091,4.912-0.374,9.047-0.374,9.047  c-0.938,2.646-0.247,3.036,1.534,0.866c0,0,4.059-4.943,2.761-10.785C-175.91,41.786-181.68,39.027-181.68,39.027z"
    />
    <path
      d="M60.24,39.494c-2.541,0.654-2.482,1.393,0.129,1.642c0,0,4.082,0.388,7.814,3.249  c3.732,2.861,5.168,6.702,5.168,6.702c0.918,2.457,1.647,2.322,1.619-0.302c0,0-0.064-5.977-4.503-9.38S60.24,39.494,60.24,39.494z"
      fill="#000000"
    />
    <path
      d="M60.24,39.494c-2.541,0.654-2.482,1.393,0.129,1.642c0,0,4.082,0.388,7.814,3.249c3.732,2.861,5.168,6.702,5.168,6.702  c0.918,2.457,1.647,2.322,1.619-0.302c0,0-0.064-5.977-4.503-9.38S60.24,39.494,60.24,39.494z"
    />
    <path
      d="M29.83,61.598c-0.497,7.39,1.88,14.885,6.613,20.525c3.591,4.279,8.553,6.54,14.348,6.54c0.266,0,0.535-0.005,0.804-0.014  c6.406-0.222,13.207-3.092,19.152-8.081c5.945-4.989,9.951-11.189,11.282-17.459c0.108-0.507,0.19-1.01,0.261-1.511H29.83z"
    />
    <path
      d="M51.341,30.812c-0.005,0.014-0.016,0.027-0.021,0.041c0.182-0.45,0.121-0.981-0.212-1.378l-0.8-0.683  c0.831-2.735,2.259-7.529,2.526-9.071c0.382-2.201,2.456-4.949,6.549-3.019c2.349,1.107,15.905,8.649,25.12,10.043  c1.712,0.259,3.19-0.131,4.19-0.901c0.533-0.41,1.267-1.578-1.479-3.091c-6.978-3.847-19.123-9.094-26.768-12.793  c-1.634-0.791-5.714-5.544-7.887-4.9c-2.173,0.644-3.46,5.576-8.385,9.827c0.009,2.715,0.463,7.289,0.672,9.255  c-0.46-0.254-1.025-0.229-1.427,0.107l-0.346,0.29l-3.195-3.807c-0.192-0.229-0.534-0.259-0.764-0.067  c0,0-25.749,16.257-27.415,17.309c-1.666,1.052-0.559,2.085-0.278,2.19l8.747,3.597l-0.144,0.12  c-0.532,0.447-0.574,1.274-0.093,1.847l3.905,6.631c0.352,0.419,0.903,0.569,1.398,0.432c-0.041,0.011-0.081,0.022-0.122,0.03  c-3.592,11.078-1.438,23.944,6.477,33.374c10.514,12.528,29.011,11.159,43.231-0.775c14.22-11.934,18.777-29.914,8.264-42.441  C75.171,33.55,62.874,29.196,51.341,30.812z M51.207,31.071c-0.015,0.024-0.029,0.048-0.046,0.071  C51.178,31.119,51.192,31.095,51.207,31.071z M25.547,52.663c0.069-0.04,0.137-0.083,0.2-0.136  C25.683,52.58,25.616,52.624,25.547,52.663z M25.289,52.779c0.069-0.022,0.135-0.051,0.201-0.084  C25.424,52.728,25.357,52.757,25.289,52.779z M84.251,63.58c-1.435,6.763-5.712,13.414-12.043,18.727  c-6.331,5.313-13.623,8.371-20.533,8.611c-6.874,0.239-12.742-2.298-16.97-7.336c-5.873-6.998-8.31-16.381-6.762-25.309  c0.163-0.941,0.279-2.515,2.424-4.316c2.146-1.801,19.518-16.38,21.249-17.832c1.73-1.452,3.235-1.563,3.986-1.576  c9.277-0.162,18.363,3.889,24.369,11.046C84.199,50.632,85.679,56.852,84.251,63.58z"
    />
    <span
      className="sc-bxivhb istUqd"
      id="coffee-pot-attribution"
    >
      Coffee Pot
    </span>
  </svg>
</div>
`;

exports[`Storyshots Keyboard with defaultProps 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "500px",
    }
  }
>
  <svg
    aria-labelledby="speaker-attribution"
    className="sc-ifAKCX bFHcSD"
    version="1.1"
    viewBox="0 0 114 54.7"
    x="0px"
    y="0px"
  >
    <g>
      <g>
        <path
          className="board"
          d="M4.1,0.9c0,0-3.2,0-3.2,3.2v46.4 c0,0,0,3.2,3.2,3.2h105.7c0,0,3.2,0,3.2-3.2V4.1c0,0,0-3.2-3.2-3.2C109.9,0.9,4.1,0.9,4.1,0.9z"
          fill="none"
          id="keyboard-outline"
          stroke="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M28,39.5c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h57.7c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6C85.7,39.5,28,39.5,28,39.5z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M90.5,39.5c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h14.8c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6C105.3,39.5,90.5,39.5,90.5,39.5z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M8.6,39.5c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h14.9c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6C23.4,39.5,8.6,39.5,8.6,39.5z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M38.6,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H38.6z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M28.2,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H28.2z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M8.6,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h14.9c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H8.6z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M48.9,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H48.9z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M59.3,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H59.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M69.7,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H69.7z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M80.1,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H80.1z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M90.5,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h15c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H90.5z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M33.9,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H33.9z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M23.6,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H23.6z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M8.6,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h10.2c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H8.6z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M44.3,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H44.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M54.7,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H54.7z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M65.1,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H65.1z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M75.5,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H75.5z"
        />
      </g>
      <g>
        <path
          className="key"
          d="M85.8,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H85.8z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M96.2,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h9.2c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H96.2z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M59.1,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C64.7,8.3,59.1,8.3,59.1,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M49,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C54.6,8.3,49,8.3,49,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M38.9,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C44.5,8.3,38.9,8.3,38.9,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M28.8,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C34.4,8.3,28.8,8.3,28.8,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M18.7,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C24.3,8.3,18.7,8.3,18.7,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M8.6,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C14.2,8.3,8.6,8.3,8.6,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M69.2,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C74.8,8.3,69.2,8.3,69.2,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M79.3,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C84.9,8.3,79.3,8.3,79.3,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M89.4,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6H95c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C95,8.3,89.4,8.3,89.4,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M99.5,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C105.1,8.3,99.5,8.3,99.5,8.3z"
          fill="#20221D"
        />
      </g>
    </g>
    <span
      className="sc-EHOje fyGdPy"
      id="speaker-attribution"
    >
      Created by Bakunetsu Kaito from the noun project.
    </span>
  </svg>
</div>
`;

exports[`Storyshots Keyboard with knobs 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "500px",
    }
  }
>
  <svg
    aria-labelledby="speaker-attribution"
    className="sc-ifAKCX bFHcSD"
    version="1.1"
    viewBox="0 0 114 54.7"
    x="0px"
    y="0px"
  >
    <g>
      <g>
        <path
          className="board"
          d="M4.1,0.9c0,0-3.2,0-3.2,3.2v46.4 c0,0,0,3.2,3.2,3.2h105.7c0,0,3.2,0,3.2-3.2V4.1c0,0,0-3.2-3.2-3.2C109.9,0.9,4.1,0.9,4.1,0.9z"
          fill="none"
          id="keyboard-outline"
          stroke="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M28,39.5c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h57.7c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6C85.7,39.5,28,39.5,28,39.5z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M90.5,39.5c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h14.8c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6C105.3,39.5,90.5,39.5,90.5,39.5z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M8.6,39.5c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h14.9c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6C23.4,39.5,8.6,39.5,8.6,39.5z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M38.6,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H38.6z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M28.2,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H28.2z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M8.6,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h14.9c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H8.6z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M48.9,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H48.9z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M59.3,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H59.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M69.7,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H69.7z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M80.1,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H80.1z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M90.5,29.1c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h15c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H90.5z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M33.9,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H33.9z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M23.6,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H23.6z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M8.6,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h10.2c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H8.6z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M44.3,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H44.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M54.7,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H54.7z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M65.1,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H65.1z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M75.5,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H75.5z"
        />
      </g>
      <g>
        <path
          className="key"
          d="M85.8,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H85.8z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M96.2,18.7c0,0-0.6,0-0.6,0.6V25c0,0,0,0.6,0.6,0.6h9.2c0,0,0.6,0,0.6-0.6 v-5.6c0,0,0-0.6-0.6-0.6H96.2z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M59.1,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C64.7,8.3,59.1,8.3,59.1,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M49,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C54.6,8.3,49,8.3,49,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M38.9,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C44.5,8.3,38.9,8.3,38.9,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M28.8,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C34.4,8.3,28.8,8.3,28.8,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M18.7,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C24.3,8.3,18.7,8.3,18.7,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M8.6,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C14.2,8.3,8.6,8.3,8.6,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M69.2,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C74.8,8.3,69.2,8.3,69.2,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M79.3,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C84.9,8.3,79.3,8.3,79.3,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M89.4,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6H95c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C95,8.3,89.4,8.3,89.4,8.3z"
          fill="#20221D"
        />
      </g>
      <g>
        <path
          className="key"
          d="M99.5,8.3c0,0-0.6,0-0.6,0.6v5.6c0,0,0,0.6,0.6,0.6h5.6c0,0,0.6,0,0.6-0.6V9 c0,0,0-0.6-0.6-0.6C105.1,8.3,99.5,8.3,99.5,8.3z"
          fill="#20221D"
        />
      </g>
    </g>
    <span
      className="sc-EHOje fyGdPy"
      id="speaker-attribution"
    >
      Created by Bakunetsu Kaito from the noun project.
    </span>
  </svg>
</div>
`;

exports[`Storyshots SillyMan with defaultProps 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "500px",
    }
  }
>
  <svg
    aria-labelledby="speaker-attribution"
    className="sc-bZQynM daCRmP"
    viewBox="0 0 100 100"
    x="0px"
    xmlns="http://www.w3.org/2000/svg"
    y="0px"
  >
    <path
      color="#000"
      d="M 50.231841,5 C 34.053238,5 24.034761,17.065043 23,33.198947 L 23,95 l 54.463681,0 0,-23.517296 c -8.041143,-0.05921 -17.39439,-5.36129 -17.472117,-13.20727 l 4.081964,0 0,4.402423 3.714544,0 0,-4.402423 3.026116,0 0,4.402423 3.714544,0 0,-4.402423 2.934949,0 0,-25.076487 C 77.463681,17.031895 66.410443,5 50.231841,5 z m 11.089622,23.796524 c 4.052318,0 7.337372,3.285053 7.337372,7.337372 0,4.052319 -3.285054,7.337372 -7.337372,7.337372 -4.052319,0 -7.337372,-3.285053 -7.337372,-7.337372 0,-4.052319 3.285053,-7.337372 7.337372,-7.337372 z"
    />
    <path
      color="#000"
      d="m 66.482495,34.579368 c 0,1.620927 -1.314022,2.934947 -2.934949,2.934947 -1.620926,0 -2.934948,-1.31402 -2.934948,-2.934947 0,-1.620929 1.314022,-2.934951 2.934948,-2.934951 1.620927,0 2.934949,1.314022 2.934949,2.934951 z"
      id="eyeball"
    />
    <span
      className="sc-gzVnrw kXblOT"
      id="speaker-attribution"
    >
      Created by Yaroslav Samoylov from the noun project.
    </span>
  </svg>
</div>
`;

exports[`Storyshots SillyMan with knobs 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "500px",
    }
  }
>
  <svg
    aria-labelledby="speaker-attribution"
    className="sc-bZQynM daCRmP"
    viewBox="0 0 100 100"
    x="0px"
    xmlns="http://www.w3.org/2000/svg"
    y="0px"
  >
    <path
      color="#000"
      d="M 50.231841,5 C 34.053238,5 24.034761,17.065043 23,33.198947 L 23,95 l 54.463681,0 0,-23.517296 c -8.041143,-0.05921 -17.39439,-5.36129 -17.472117,-13.20727 l 4.081964,0 0,4.402423 3.714544,0 0,-4.402423 3.026116,0 0,4.402423 3.714544,0 0,-4.402423 2.934949,0 0,-25.076487 C 77.463681,17.031895 66.410443,5 50.231841,5 z m 11.089622,23.796524 c 4.052318,0 7.337372,3.285053 7.337372,7.337372 0,4.052319 -3.285054,7.337372 -7.337372,7.337372 -4.052319,0 -7.337372,-3.285053 -7.337372,-7.337372 0,-4.052319 3.285053,-7.337372 7.337372,-7.337372 z"
    />
    <path
      color="#000"
      d="m 66.482495,34.579368 c 0,1.620927 -1.314022,2.934947 -2.934949,2.934947 -1.620926,0 -2.934948,-1.31402 -2.934948,-2.934947 0,-1.620929 1.314022,-2.934951 2.934948,-2.934951 1.620927,0 2.934949,1.314022 2.934949,2.934951 z"
      id="eyeball"
    />
    <span
      className="sc-gzVnrw kXblOT"
      id="speaker-attribution"
    >
      Created by Yaroslav Samoylov from the noun project.
    </span>
  </svg>
</div>
`;

exports[`Storyshots VerticalText with defaultProps 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
      "margin": "0 auto",
      "maxWidth": "500px",
      "minHeight": "500px",
    }
  }
>
  <div>
    <div
      className="sc-htoDjs izEQXM"
    >
      W
    </div>
    <div
      className="sc-htoDjs izEQXM"
    >
      o
    </div>
    <div
      className="sc-htoDjs izEQXM"
    >
      r
    </div>
    <div
      className="sc-htoDjs izEQXM"
    >
      d
    </div>
    <div
      className="sc-htoDjs izEQXM"
    >
      s
    </div>
  </div>
</div>
`;

exports[`Storyshots VerticalText with knobs 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
      "margin": "0 auto",
      "maxWidth": "500px",
      "minHeight": "500px",
    }
  }
>
  <div>
    <div
      className="sc-htoDjs izEQXM"
    >
      W
    </div>
    <div
      className="sc-htoDjs izEQXM"
    >
      o
    </div>
    <div
      className="sc-htoDjs izEQXM"
    >
      r
    </div>
    <div
      className="sc-htoDjs izEQXM"
    >
      d
    </div>
    <div
      className="sc-htoDjs izEQXM"
    >
      s
    </div>
  </div>
</div>
`;
